copy plust nav bar
formatted the copy and added the nav bar to the bottom

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <!--LINK TO FONT AWESOME FOR SOCIAL ICONS-->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet" type="text/css"> 
 <link href="css/style.css" rel="stylesheet" type="text/css">
+<link rel="stylesheet" href="stylesheet.css" type="text/css" />
 </head>
 
     <body>
@@ -26,28 +27,72 @@
     </header>
     <div class="row"> <h1>The Eight Most Influential People in Seattle</h1></div>
     <div class="row">
+        <img src='img/doll.jpg' />
         <div class="item">
    
-    <h2>Kemi Doll</h2>
-    <p class="intro">Praesent a id massa bibendum dictum ridiculus class consectetur scelerisque scelerisque ad eu a consectetur orci. Litora a a vehicula rutrum sodales ullamcorper mauris nibh congue imperdiet mauris tempor curabitur fusce augue a. Ridiculus dictumst vehicula suspendisse curabitur euismod ut condimentum ullamcorper ad a a cras condimentum ultrices a conubia porta natoque luctus maecenas. </p>
-            </div>
-    <div class="item">
-    <blockquote>
-    Praesent a id massa bibendum dictum ridiculus class consectetur scelerisque scelerisque ad eu a consectetur orci. Litora a a vehicula rutrum sodales ullamcorper mauris nibh congue imperdiet mauris tempor curabitur fusce augues. 
-    </blockquote>
+    <h2>Kemi M Doll, MD</h2>
+    <p>
+        Kemi Doll is a practicing gynecologic oncologist and health services researcher at the University of Washington in Seattle, WA. 
+    </p>
+        </div>
+    </div>
+    <div class= "row">
+    <p class="intro">Kemi Doll’s dedication to improving outcomes for Black women with endometrial cancer have led her into advocacy work that focuses both quantitatively through research as well qualitatively by providing patients information about their diagnosis or treatment options many doctors are not as familiar with when it comes to race/ethnicity issues. Doll is dedicated to her patients and their families, believing that every person deserves honesty, respect and compassion in the cancer care process. </p>
+            
+    </div>
+    <div>
+
+    <div class= "row"> 
+        <p>
+            Doll has worked diligently through her career in order to raise awareness about this relatively unknown disease, which affected mostly African American women at a disproportionately higher rate than other cancers do. White women who are diagnosed in the U.S. with endometrial cancer—the most common cancer of the female reproductive organs—have an 80 percent survival rate. Black women, by comparison, are 90 percent more likely to die after a diagnosis than their peers. Doll uses education programs geared towards raising awareness within medical communities.
+        </p>
+    </div>
+    <div class= "row">
+        <div class="item">
+        <blockquote>
+             “The research, the outreach, the pressure—it’s a lot, but it’s worth it if it means adding a few more Black women to the proverbial room.”
+        </blockquote>
         </div></div>
+        <div class= "row"> 
+            <p>
+                Despite these challenges Doll has managed not only success with battling her own cancer, but also taking on organizational efforts and continuing her award winning research. Doll has pulled this lesser-known uterine cancer out of obscurity and into a country wide conversation about racial inequity in women's health care.  In 2017 Doll founded the Endometrial Cancer Action Network for African Americans. This organization empowers survivors and raises awareness of uterine cancer in order to reduce its occurrence among Black women as well as raises awareness among people who are at risk or have already been diagnosed with endometrioma.
+            </p>
+        </div>
+        <div class= "row"> 
+            <p>
+                When Doll talks about the work that needs to be done in order for Black women's voices and perspectives to be heard, she acts and doesn't hesitate.
+            </p>
+        </div>
+        <div class= "row"> 
+            <p>
+                In September, Doll began enrolling Seattle participants in her four-year $6 million SISTER Study. This study focuses on post diagnosis social support and how it influences health outcomes; which has been the largest ever funded trial that specifically tracks Black women's experiences with cancer.
+            </p>
+        </div>
+        <div class= "row"> 
+            <p>
+                Doll is an inspiration to so many, not just because she's a successful female physician with three doctorates but also for the way in which she uses her platform. The woman always finds time for relaxation; during off hours from work or family obligations—Doll insists such things exist!--she has taken up podcasting, coaching other women of color pursuing careers in academic medicine and sharing motivational quotes on Twitter alongside health equity messaging.
+            </p>
+        </div>
+
     
     <!--DO NOT EDIT THIS NAVBAR. IT LINKS TO THE OTHER PROJECTS-->
     <div class="row">
-    <ul class="global"> <li><a  href="../luna/index.html">Claudia Castro Luna</a></li>
-        <li><a href="../nakajima/index.html">Shota Nakajima</a></li>
-        <li><a href="../starbird/index.html">Kate Starbird</a></li>
-        <li><a href="../berg/index.html">Clara Berg</a></li>
-        <li><a href="../echohawk/index.html">Colleen Echohawk</a></li>
-        <li><a class="current" href="../doll/index.html">Kemi Doll</a></li>
-        <li><a href="../clise/index.html">Laura Clise</a></li>
-        <li><a href="../nadella/index.html">Satya Nadella</a></li>
+    <ul class="global"> <li><a  href="../luna/index.html"><img src='img/luna.jpg' /></a><h2 class="animate-text">Claudia Castro Luna</h2></li>
+        <li><a href="../nakajima/index.html" ><img src='img/nakajima.jpg' /></a><h2 class="animate-text">Shota Nakajima</h2></li>
+        <li><a href="../starbird/index.html"><img src='img/starbird.jpg' /></a><h2 class="animate-text">Kate Starbird</h2></li>
+        <li><a href="../berg/index.html"><img src='img/berg.jpg' /></a>
+            <h2 class="animate-text">Clara Berg</h2></li>
+        <li><a href="../echohawk/index.html"><img src="img/echohawk.jpg" /></a><h2 class="animate-text">Colleen Echohawk</h2></li>
+        <li><a class="current" href="../doll/index.html"><img src='img/doll.jpg' /></a><h2 class="animate-text">Kemi Doll</h2></li>
+        <li><a href="../clise/index.html"><img src='img/clise.jpg' /></a><h2 class="animate-text">Laura Clise</h2></li>
+        <li><a href="../nadella/index.html"><img src='img/nadella.jpg' /></a><h2 class="animate-text">Satya Nadella</h2></li>
     </ul>
+</div>
+
+      </div>
+
+
+
         </div>
     <!--DO NOT EDIT THE FOOTER-->
     <footer>
