--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
     </nav>
     </header>
     <div class="row"> <h1>The Eight Most Influential People in Seattle</h1></div>
+    <div class= "row">
+        <img src='https://via.placeholder.com/800x400.png?text=Hero+Image' /> 
+    </div>
     <div class="row">
         <img src='img/doll.jpg' />
         <div class="item">
@@ -68,7 +71,10 @@
                 In September, Doll began enrolling Seattle participants in her four-year $6 million SISTER Study. This study focuses on post diagnosis social support and how it influences health outcomes; which has been the largest ever funded trial that specifically tracks Black women's experiences with cancer.
             </p>
         </div>
-        <div class= "row"> 
+        <div class= "row">
+            <img src='https://via.placeholder.com/800x400.png?text=Secondary+Image' /> 
+        </div>
+        <div class="row">
             <p>
                 Doll is an inspiration to so many, not just because she's a successful female physician with three doctorates but also for the way in which she uses her platform. The woman always finds time for relaxation; during off hours from work or family obligations—Doll insists such things exist!--she has taken up podcasting, coaching other women of color pursuing careers in academic medicine and sharing motivational quotes on Twitter alongside health equity messaging.
             </p>
