--- a/index.html
+++ b/index.html
@@ -31,9 +31,10 @@
             <li><a href="../nakajima/index.html" ><img src='img/nakajima.jpg' /></a><h2 class="animate-text">Shota Nakajima</h2></li>
             <li><a href="../starbird/index.html"><img src='img/starbird.jpg' /></a><h2 class="animate-text">Kate Starbird</h2></li>
             <li><a href="../berg/index.html"><img src='img/berg.jpg' /></a>
-                <h2 class="animate-text">Clara Berg</h2></li>
+                <h2 class="animate-text">Clara Berg</h2></li></ul>
             </div>
             <div class="row">
+                <ul class="global">
             <li><a href="../echohawk/index.html"><img src="img/echohawk.jpg" /></a><h2 class="animate-text">Colleen Echohawk</h2></li>
             <li><a class="current" href="../doll/index.html"><img src='img/doll.jpg' /></a><h2 class="animate-text">Kemi Doll</h2></li>
             <li><a href="../clise/index.html"><img src='img/clise.jpg' /></a><h2 class="animate-text">Laura Clise</h2></li>
