--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <!--LINK TO FONT AWESOME FOR SOCIAL ICONS-->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet" type="text/css"> 
 <link href="css/style.css" rel="stylesheet" type="text/css">
-<link rel="stylesheet" href="stylesheet.css" type="text/css" />
 </head>
 
     <body>
@@ -45,7 +44,6 @@
             
     </div>
     <div>
-
     <div class= "row"> 
         <p>
             Doll has worked diligently through her career in order to raise awareness about this relatively unknown disease, which affected mostly African American women at a disproportionately higher rate than other cancers do. White women who are diagnosed in the U.S. with endometrial cancer—the most common cancer of the female reproductive organs—have an 80 percent survival rate. Black women, by comparison, are 90 percent more likely to die after a diagnosis than their peers. Doll uses education programs geared towards raising awareness within medical communities.
@@ -59,7 +57,7 @@
         </div></div>
         <div class= "row"> 
             <p>
-                Despite these challenges Doll has managed not only success with battling her own cancer, but also taking on organizational efforts and continuing her award winning research. Doll has pulled this lesser-known uterine cancer out of obscurity and into a country wide conversation about racial inequity in women's health care.  In 2017 Doll founded the Endometrial Cancer Action Network for African Americans. This organization empowers survivors and raises awareness of uterine cancer in order to reduce its occurrence among Black women as well as raises awareness among people who are at risk or have already been diagnosed with endometrioma.
+                Despite these challenges, Doll has managed not only success with battling her own cancer, but also taking on organizational efforts and continuing her award winning research. Doll has pulled this lesser-known uterine cancer out of obscurity and into a country wide conversation about racial inequity in women's health care.  In 2017 Doll founded the Endometrial Cancer Action Network for African Americans. This organization empowers survivors and raises awareness of uterine cancer in order to reduce its occurrence among Black women as well as raises awareness among people who are at risk or have already been diagnosed with endometrioma.
             </p>
         </div>
         <div class= "row"> 
@@ -84,15 +82,15 @@
     
     <!--DO NOT EDIT THIS NAVBAR. IT LINKS TO THE OTHER PROJECTS-->
     <div class="row">
-    <ul class="global"> <li><a  href="../luna/index.html"><img src='img/luna.jpg' /></a><h2 class="animate-text">Claudia Castro Luna</h2></li>
-        <li><a href="../nakajima/index.html" ><img src='img/nakajima.jpg' /></a><h2 class="animate-text">Shota Nakajima</h2></li>
-        <li><a href="../starbird/index.html"><img src='img/starbird.jpg' /></a><h2 class="animate-text">Kate Starbird</h2></li>
-        <li><a href="../berg/index.html"><img src='img/berg.jpg' /></a>
-            <h2 class="animate-text">Clara Berg</h2></li>
-        <li><a href="../echohawk/index.html"><img src="img/echohawk.jpg" /></a><h2 class="animate-text">Colleen Echohawk</h2></li>
-        <li><a class="current" href="../doll/index.html"><img src='img/doll.jpg' /></a><h2 class="animate-text">Kemi Doll</h2></li>
-        <li><a href="../clise/index.html"><img src='img/clise.jpg' /></a><h2 class="animate-text">Laura Clise</h2></li>
-        <li><a href="../nadella/index.html"><img src='img/nadella.jpg' /></a><h2 class="animate-text">Satya Nadella</h2></li>
+    <ul class="global"> <li><a  href="../luna/index.html"><img src='img/luna.jpg' /><h5 class="animate-text">Claudia Castro Luna</h5></a></li>
+        <li><a href="../nakajima/index.html" ><img src='img/nakajima.jpg' /><h5 class="animate-text">Shota Nakajima</h5></a></li>
+        <li><a href="../starbird/index.html"><img src='img/starbird.jpg' /><h5 class="animate-text">Kate Starbird</h5></a></li>
+        <li><a href="../berg/index.html"><img src='img/berg.jpg' /><h5 class="animate-text">Clara Berg</h5></a></li>
+        <li><a href="../echohawk/index.html"><img src="img/echohawk.jpg" /><h5 class="animate-text">Colleen Echohawk</h5></a></li>
+        <!-- <a class "current" marks your person, remove this class and add it to your person's link -->
+        <li><a class="current" href="../doll/index.html"><img src='img/doll.jpg' /><h5 class="animate-text">Kemi Doll</h5></a></li>
+        <li><a href="../clise/index.html"><img src='img/clise.jpg' /><h5 class="animate-text">Laura Clise</h5></a></li>
+        <li><a href="../nadella/index.html"><img src='img/nadella.jpg' /><h5 class="animate-text">Satya Nadella</h5></a></li>
     </ul>
 </div>
 
