Removed commented out tags

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <p class="intro">Kemi Doll’s dedication to improving outcomes for Black women with endometrial cancer have led her into advocacy work that focuses both quantitatively through research as well qualitatively by providing patients information about their diagnosis or treatment options many doctors are not as familiar with when it comes to race/ethnicity issues. Doll is dedicated to her patients and their families, believing that every person deserves honesty, respect and compassion in the cancer care process. </p>
             
     </div>
-    <div>
+    <!-- <div> -->
     <div class= "row"> 
         <p>
             Doll has worked diligently through her career in order to raise awareness about this relatively unknown disease, which affected mostly African American women at a disproportionately higher rate than other cancers do. White women who are diagnosed in the U.S. with endometrial cancer—the most common cancer of the female reproductive organs—have an 80 percent survival rate. Black women, by comparison, are 90 percent more likely to die after a diagnosis than their peers. Doll uses education programs geared towards raising awareness within medical communities.
@@ -94,11 +94,6 @@
     </ul>
 </div>
 
-      </div>
-
-
-
-        </div>
     <!--DO NOT EDIT THE FOOTER-->
     <footer>
         <div class="row">
