--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <img src='https://via.placeholder.com/800x400.png?text=Hero+Image' /> 
     </div>
     <div class="row">
-        <img src='img/doll.jpg' />
+        <img src='img/kemiprofile.jpg' />
         <div class="item">
    
     <h2>Kemi M Doll, MD</h2>
