--- a/index.html
+++ b/index.html
@@ -26,6 +26,16 @@
     </header>
     <div class="row"> <h1>The Eight Most Influential People in Seattle</h1></div>
 
+    <ul id="upper"> <li><a  href="luna/index.html"><img src="img/luna.jpg"  alt="Luna"/>Claudia Castro Luna</a></li>
+        <li><a href="nakajima/index.html"><img src="img/nakajima.jpg" alt="shota"/>Shota Nakajima</a></li>
+        <li><a href="starbird/index.html"><img src="img/starbird.jpg" alt="starbird"/>Kate Starbird</a></li>
+        <li><a href="berg/index.html"><img src="img/berg.jpg" alt="berg"/>Clara Berg</a></li>
+        <li><a href="echohawk/index.html"><img src="img/echohawk.jpg" alt=""/>Colleen Echohawk</a></li>
+        <li><a href="doll/index.html"><img src="img/doll.jpg" alt="doll"/> Kemi Doll</a></li>
+        <li><a href="clise/index.html"><img src="img/clise.jpg" alt=""/>Laura Clise</a></li>
+        <li><a href="nadella/index.html"><img src="img/nadella.jpg" alt="Nadella"/>Satya Nadella</a></li>
+    </ul>
+
     <div class= "hero">
         <img src='img/hero.jpg' /> 
     </div>
@@ -67,8 +77,11 @@
                 When Doll talks about the work that needs to be done in order for Black women's voices and perspectives to be heard, she acts and doesn't hesitate.
             </p>
         </div>
+       
         <div class= "row">
-            <img src='img/kemisecondary.jpg' />
+            <figure>
+            <img src='img/kemisecondary.jpg' alt="Kemi Doll"/> <figcaption>Image: Kemi Doll</figcaption>
+        </figure>
         </div>
         <div class= "row"> 
             <p>
@@ -89,7 +102,7 @@
                 <i class="fa fa-twitter"></i>
                 <i class="fa fa-facebook-square"></i>
                 <i class="fa fa-youtube-play"></i><br>
-            </div><hr><small>Comment</small>
+            </div><hr>
         </div>
 
     
