--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </div>
     <div class="row">
         
-        <img src='img/kemiprofile.jpg' />
+        <img class="profile" src='img/kemiprofile.jpg' />
     
         <div class="item">
    
