--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
         </p>
     </div>
     <div class= "row">
-        <div class="item">
+        <div id="blockquote-item">
+            <div class="yellow-circle"></div>
         <blockquote>
              “The research, the outreach, the pressure—it’s a lot, but it’s worth it if it means adding a few more Black women to the proverbial room.”
         </blockquote>
